Project

General

Profile

Actions

Bug #10828

closed

send should not create immortal symbols

Bug #10828: send should not create immortal symbols

Added by marcandre (Marc-Andre Lafortune) over 11 years ago. Updated over 11 years ago.

Status:
Closed
Target version:
-
[ruby-core:68008]

Description

While public_send is ok, send and __send__ create immortal symbols when they shouldn't.

Updated by marcandre (Marc-Andre Lafortune) over 11 years ago Actions #1 [ruby-core:68010]

  • Assignee changed from marcandre (Marc-Andre Lafortune) to nobu (Nobuyoshi Nakada)
  • Priority changed from Normal to 5

Mmm, I was hopeful about r49500 but it generates some failures in test/drb/test_drb.rb, so there's something going on that's above my ruby-fu level.
I reverted that commit, disabling the two tests.
I'm assigning this to Nobu, in hope he can come to my rescue...

Updated by nobu (Nobuyoshi Nakada) over 11 years ago Actions #2

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

Applied in changeset r49505.


vm_insnhelper.c: fix missing reason

  • vm_insnhelper.c (ci_missing_reason): return the reason of method
    missing in call info.
  • vm_insnhelper.c (vm_call_opt_send): re-apply r49500 with the
    proper missing reason. [Bug #10828]

Updated by marcandre (Marc-Andre Lafortune) over 11 years ago Actions #3

  • Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN, 2.2: UNKNOWN to 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: REQUIRED

Updated by naruse (Yui NARUSE) over 11 years ago Actions #4 [ruby-core:68120]

  • Backport changed from 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: REQUIRED to 2.0.0: DONTNEED, 2.1: DONTNEED, 2.2: DONE

ruby_2_2 r49598 merged revision(s) 49499,49500,49501,49502,49504,49505,49506,49507.

Actions

Also available in: PDF Atom